// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummay with 1 expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense 
    totalling 
    $45.00
  </h1>
</div>
`;

exports[`should render ExpensesSummay with multiple expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    3
     expenses 
    totalling 
    $57.90
  </h1>
</div>
`;
